--- a/Semesterprojekt/src/branching-struktur.tex
+++ b/Semesterprojekt/src/branching-struktur.tex
@@ -29,7 +29,7 @@ Nur von Hotfix Branches und Develop können Versionen in Main gelangen, dabei wi
 Die verschiedenen Versionen bekommen Tags mit dem Namen der entsprechenden, semantischen Version.
 
 
-\paragraph{In} der App soll es zusätzlich zum Develop Branch noch einen Staging Branch geben.
+\paragraph{\large{In}} der App soll es zusätzlich zum Develop Branch noch einen Staging Branch geben.
     Seine Existenz wird in Abschnitt~\ref{subsubsec:deployment-umgebungen} begründet.
     Von Develop wird in Staging gemerged und von Staging anschließend in Main.
 
@@ -39,5 +39,5 @@ Die verschiedenen Versionen bekommen Tags mit dem Namen der entsprechenden, sema
     Auch ist mit Ablehnungen zu rechnen.
 
 
-\paragraph{Die} Software, der Klingel Hardware, braucht keinen Staging Branch.
+\paragraph{\large{Die}} Software, der Klingel Hardware, braucht keinen Staging Branch.
     Hier wird Develop direkt in Main gemerged.
