--- a/Semesterprojekt/src/deployment-umgebungen.tex
+++ b/Semesterprojekt/src/deployment-umgebungen.tex
@@ -4,7 +4,7 @@ Anders ist es bei Software für eigene Hardware.
 Hier gild es kreative zu werden.
 
 
-\paragraph{Der} Aufbau der Stores ist in vielen Punkten ähnlich:
+\paragraph{\large{Der}} Aufbau der Stores ist in vielen Punkten ähnlich:
     Ein Build wird in einem Portal hochgeladen, und kann dann verschiedenen Tracks zugewiesen werden.
     Verschiedene Gruppen von Nutzern, Testern und Entwicklern haben anschließend zugriff auf ihnen zugewiesene Tracks.
     iOS hat zwei Tracks, TestFlight for Tester und AppStore für öffentliche Releases.
@@ -23,7 +23,7 @@ Hier gild es kreative zu werden.
     Production bildet hingegen Main ab und ist ein öffentlicher Release.
 
 
-\paragraph{Mit} eigener Kontrolle über das Deployment wählen wir für die Software der Klingelhardware den kurzen weg zum Staging System, da voraussichtlich mit recht Produktions unähnlicher Hardware getestet werden muss;
+\paragraph{\large{Mit}} eigener Kontrolle über das Deployment wählen wir für die Software der Klingelhardware den kurzen weg zum Staging System, da voraussichtlich mit recht Produktions unähnlicher Hardware getestet werden muss;
     Develop ist die Branch, die von der Staging Umgebung abgebildet wird.
     So wird die Software über einen Update--Check, der bei jeder Anfrage an das Backend über einen Header überprüft wird, von einem dafür ausgelegten FTP Server aktualisiert.
     Diesen Server gibt es dabei für jede Environment und die URI wird in die App kompiliert.
