--- a/Semesterprojekt/src/main.tex
+++ b/Semesterprojekt/src/main.tex
@@ -82,26 +82,16 @@
 \DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
 
 \title{Semesterprojekt}
-\author[1]{Nik Benson}
-\affil[1]{\href{mailto:nik.benson@studmail.w-hs.de}{nik.benson@studmail.w-hs.de}}
-\author[2]{Marco Kanera}
-\affil[2]{\href{mailto:marco.kanera@studmail.w-hs.de}{marco.kanera@studmail.w-hs.de}}
-\author[3]{<name>}
-\affil[3]{\href{mailto:<email>}{<email>}}
-\author[4]{<name>}
-\affil[4]{\href{mailto:<email>}{<email>}}
+\author{Nik Benson, Marco Kanera, <name> und <name>}
 
 \begin{document}
     \pagenumbering{gobble}
     \include{title}
 
     \pagenumbering{Roman}
-    \addcontentsline{toc}{section}{Inhaltsverzeichnis}
     \tableofcontents
     \addcontentsline{toc}{section}{Abbildungsverzeichnis}
     \listoffigures
-    \addcontentsline{toc}{section}{Tabellenverzeichnis}
-    \listoftables
     \newpage
     \pagenumbering{arabic}
 
