--- a/Semesterprojekt/src/persona-stories.tex
+++ b/Semesterprojekt/src/persona-stories.tex
@@ -1,11 +1,11 @@
-\paragraph{Bewohner eines Mehrfamilienhauses}
+\paragraph{\large{Bewohner eines Mehrfamilienhauses}}
     Joanna Baumann ist eine 25. Jährige Datenschutzanwältin.
     Schon immer fühlt sie sich mit ihrem Namen an der Tür unsicher.
     Und es ärgert sie, dass sie nicht sieht, wer vor der Tür steht, wenn geklingelt wird.
     Von dem neuen System erhofft sie sich ein komfortableres und sicheres Wohnen.
 
 
-\paragraph{Hausverwalter}
+\paragraph{\large{Hausverwalter}}
     Zita Hoyer hat sich zu ihrem 30. Geburstag ihre erste Imobilie gekauft.
     Diese vermietet sie an Tilo.
     Das erste Jahr gab es keine Probleme, aber mit der Zeit hat sich der zugezogene Tilo Feinde gemacht.
@@ -13,7 +13,7 @@
     Zita möchte die Anlage installieren, auch um die Vandaliste zu erwischen.
 
 
-\paragraph{Wartungsmitarbeiter einer Industriefirma}
+\paragraph{\large{Wartungsmitarbeiter einer Industriefirma}}
     Horst Keck ist 46 Jahre alt und hat sich mit 24 Jahren, mit seiner Firma \qq{Kek Maschieneninstandhaltungen}, selbstständig gemacht.
     Mit seiner Firma wartet er unter anderem das Nuklearkraftwerk \qq{Energy Boom} in Bocholt.
     Sowohl er als auch seine Mitarbeiter sind keine Nuklearphysiker, sondern Maschinenbauer.
@@ -21,7 +21,7 @@
     Von der Software erhofft er sich fachlichen Support von Physikern des Betreibers, wenn er an der Anlage arbeitet.
 
 
-\paragraph{Hotelbesucher}
+\paragraph{\large{Hotelbesucher}}
     Bernd Meier ist 27 Jahre jung und Elektriker.
     Er ist von der Elektronik GmbH auf Montage und soll in der Fachhochschule in Bocholt die Beamer neu verkabeln.
     Dazu übernachtet er im Hotel \qq{Zur guten Übernachtung}.
