--- a/Semesterprojekt/src/anwendungsfälle.tex
+++ b/Semesterprojekt/src/anwendungsfälle.tex
@@ -4,33 +4,12 @@ Außerdem wird jeder Anwendungsfall (ein paar Anwendungsfälle doppeln sich in d
 \begin{figure}[ht!]
     \centering
     \includegraphics[width=\paperwidth-2in]{../assets/img/UML-Anwendungsfalldiagramme-Klingeln bei einem Mehrfamilienhaus}
-    \caption{Klingeln bei einem Mehrfamilienhaus Anwendungsfall}
+    \caption{Anwendungsfälle Klingeln bei einem Mehrfamilienhaus}
     \label{fig:klingeln-bei-einem-mehrfamilienhaus}
 \end{figure}
 
-\begin{figure}[ht!]
-    \centering
-    \includegraphics[width=(\paperwidth-2in)/2]{../assets/img/UML-Anwendungsfalldiagramme-Vandalismus.drawio}
-    \caption{Vandalismus Anwendungsfall}
-    \label{fig:vandalismus}
-\end{figure}
-
-\begin{figure}[ht!]
-    \centering
-    \includegraphics[width=\paperwidth-2in]{../assets/img/UML-Anwendungsfalldiagramme-Industrieanlage reparieren.drawio}
-    \caption{Industrieanlage reparieren Anwendungsfall}
-    \label{fig:industrieanlage-reparieren}
-\end{figure}
-
-\begin{figure}[ht!]
-    \centering
-    \includegraphics[width=\paperwidth-2in]{../assets/img/UML-Anwendungsfalldiagramme-Zimmerservice.drawio}
-    \caption{Zimmerservice Anwendungsfall}
-    \label{fig:zimmerservice}
-\end{figure}
-
-
 \paragraph{\large{Klingel betätigen}}
+\textit{Siehe Abbildung ~\ref{fig:klingeln-bei-einem-mehrfamilienhaus}}
     \begin{description}
         \item[Ziel:] Besucher möchte klingeln.
         \item[Beschreibung:] Klingel wird betätigt, um Kontakt zu Wohnungsbesitzer aufzunehmen.
@@ -41,6 +20,7 @@ Außerdem wird jeder Anwendungsfall (ein paar Anwendungsfälle doppeln sich in d
     \end{description}
 
 \paragraph{\large{Anruf annehmen}}
+\textit{Siehe Abbildungen ~\ref{fig:klingeln-bei-einem-mehrfamilienhaus}, ~\ref{fig:industrieanlage-reparieren} und ~\ref{fig:fig:zimmerservice}}
     \begin{description}
         \item[Ziel:] Ein eingehender Anruf soll angenommen werden.
         \item[Beschreibung:] Indem der Benutzer auf die eingehende Benachrichtigung klickt, wird der Anruf angenommen.
@@ -52,6 +32,7 @@ Außerdem wird jeder Anwendungsfall (ein paar Anwendungsfälle doppeln sich in d
     \end{description}
 
 \paragraph{\large{Anruf ablehnen}}
+\textit{Siehe Abbildungen ~\ref{fig:klingeln-bei-einem-mehrfamilienhaus}, ~\ref{fig:industrieanlage-reparieren} und ~\ref{fig:fig:zimmerservice}}
     \begin{description}
         \item[Ziel:] Ein eingehender Anruf soll abgelehnt werden.
         \item[Beschreibung:] Indem der Benutzer die eingehende Benachritigung wegklickt, wird der Anruf abgelehnt.
@@ -63,6 +44,7 @@ Außerdem wird jeder Anwendungsfall (ein paar Anwendungsfälle doppeln sich in d
     \end{description}
 
 \paragraph{\large{Anruf beenden}}
+\textit{Siehe Abbildung ~\ref{fig:klingeln-bei-einem-mehrfamilienhaus}, ~\ref{fig:industrieanlage-reparieren} und ~\ref{fig:fig:zimmerservice}}
     \begin{description}
         \item[Ziel:] Ein laufender Anruf soll beendet werden.
         \item[Beschreibung:] Indem der Benutzer in der Visualisierung den Button zum Auflegen betätigt, kann der Anruf jederzeit beendet werden.
@@ -71,20 +53,9 @@ Außerdem wird jeder Anwendungsfall (ein paar Anwendungsfälle doppeln sich in d
         \item[Vorbedingungen:] Wohnungsbesitzer, Reparatur-Mitarbeiter oder Zimmerservice hat einen Anruf angenommen.
         \item[Nachbedingungen:] Anruf wurde beendet.
     \end{description}
-
-\paragraph{\large{Anruf weiterleiten}}
-    \begin{description}
-        \item[Ziel:] Ein eingehender Anruf soll an einen ausgewählten Kontakt weitergeleitet werden.
-        \item[Beschreibung:] Indem der Benutzer in der Visualisierung den Button zum Weiterleiten betätigt, kann der eingehende Anruf an einen verfügbaren Kontakt weitergeleitet werden.
-            Diesen Kontakt kann er anschließend wie im Anwendungsfall "Kontakt suchen und auswählen" wählen.
-            Mit einem weiteren Knopfdruck wird der Anruf an den ausgewählten Kontakt weitergeleitet.
-        \item[Akteure:] Reparatur-Mitarbeiter.
-        \item[Auslöser:] Eingehender Anruf.
-        \item[Vorbedingungen:] Industrie-Mitarbeiter hat Kontakt des Reparatur-Unternehmens angerufen.
-        \item[Nachbedingungen:] Anruf wurde an ausgewählten Kontakt weitergeleitet.
-    \end{description}
-
+    
 \paragraph{\large{Live-Bild der Kamera anschalten}}
+\textit{Siehe Abbildung ~\ref{fig:klingeln-bei-einem-mehrfamilienhaus}}
     \begin{description}
         \item[Ziel:] Das Live-Bild der Kamera an der Eingangstür soll angeschaltet werden.
         \item[Beschreibung:] Indem der Benutzer in der Visualisierung den entsprechenden Button betätigt, wird das Live-Bild angeschaltet.
@@ -96,6 +67,7 @@ Außerdem wird jeder Anwendungsfall (ein paar Anwendungsfälle doppeln sich in d
     \end{description}
 
 \paragraph{\large{Live-Bild der Kamera ausschalten}}
+\textit{Siehe Abbildung ~\ref{fig:klingeln-bei-einem-mehrfamilienhaus}}
     \begin{description}
         \item[Ziel:] Das Live-Bild der Kamera an der Eingangstür soll ausgeschaltet werden.
         \item[Beschreibung:] Indem der Benutzer in der Visualisierung den entsprechenden Button betätigt, wird das Live-Bild ausgeschaltet.
@@ -107,6 +79,7 @@ Außerdem wird jeder Anwendungsfall (ein paar Anwendungsfälle doppeln sich in d
     \end{description}
 
 \paragraph{\large{Automatikschloss der Tür aufschließen}}
+\textit{Siehe Abbildung ~\ref{fig:klingeln-bei-einem-mehrfamilienhaus}}
     \begin{description}
         \item[Ziel:] Das Automatikschloss der Eingangstür soll aufgeschlossen werden, um den Besucher ins Gebäude zu lassen.
         \item[Beschreibung:] Indem der Benutzer in der Visualisierung den entsprechenden Button betätigt, wird das Automatikschloss aufgeschlossen.
@@ -117,6 +90,7 @@ Außerdem wird jeder Anwendungsfall (ein paar Anwendungsfälle doppeln sich in d
     \end{description}
 
 \paragraph{\large{Automatikschloss der Tür zuschließen}}
+\textit{Siehe Abbildung ~\ref{fig:klingeln-bei-einem-mehrfamilienhaus}}
     \begin{description}
         \item[Ziel:] Das Automatikschloss der Eingangstür soll zugeschlossen werden.
         \item[Beschreibung:] Indem der Benutzer in der Visualisierung den entsprechenden Button betätigt, wird das Automatikschloss zugeschlossen.
@@ -126,7 +100,49 @@ Außerdem wird jeder Anwendungsfall (ein paar Anwendungsfälle doppeln sich in d
         \item[Nachbedingungen:] Das Automatikschloss der Eingangstür wurde zugeschlossen.
     \end{description}
 
+
+\begin{figure}[ht!]
+    \centering
+    \includegraphics[width=(\paperwidth-2in)/2]{../assets/img/UML-Anwendungsfalldiagramme-Vandalismus.drawio}
+    \caption{Anwendungsfälle Vandalismus}
+    \label{fig:vandalismus}
+\end{figure}
+
+\paragraph{\large{Aufgezeichnetes Videomaterial einsehen}}
+\textit{Siehe Abbildung ~\ref{fig:vandalismus}}
+    \begin{description}
+        \item[Ziel:] Aufgezeichnetes Videomaterial, das nicht älter als eine Woche ist, soll eingesehen werden.
+        \item[Beschreibung] Über die Visualisierung kann der Benutzer, über eine Liste, die Kamera auswählen, von der er das aufgezeichnete Videomaterial einsehen möchte.
+            Darufhin wird ihm das entsprechende Videomaterial der letzten 7 Tage angezeigt.
+        \item[Akteure:] Hausverwalter.
+        \item[Auslöser:] Hausverwalter möchte Videomaterial einsehen.
+        \item[Vorbedingungen:] Keine.
+        \item[Nachbedingungen:] Aufgezeichnetes Videomaterial, das nicht älter als eine Woche ist, wurde eingesehen.
+    \end{description}
+
+
+\begin{figure}[ht!]
+    \centering
+    \includegraphics[width=\paperwidth-2in]{../assets/img/UML-Anwendungsfalldiagramme-Industrieanlage reparieren.drawio}
+    \caption{Anwendungsfälle Industrieanlage reparieren}
+    \label{fig:industrieanlage-reparieren}
+\end{figure}
+
+\paragraph{\large{Anruf weiterleiten}}
+\textit{Siehe Abbildung ~\ref{fig:industrieanlage-reparieren}}
+    \begin{description}
+        \item[Ziel:] Ein eingehender Anruf soll an einen ausgewählten Kontakt weitergeleitet werden.
+        \item[Beschreibung:] Indem der Benutzer in der Visualisierung den Button zum Weiterleiten betätigt, kann der eingehende Anruf an einen verfügbaren Kontakt weitergeleitet werden.
+            Diesen Kontakt kann er anschließend wie im Anwendungsfall "Kontakt suchen und auswählen" wählen.
+            Mit einem weiteren Knopfdruck wird der Anruf an den ausgewählten Kontakt weitergeleitet.
+        \item[Akteure:] Reparatur-Mitarbeiter.
+        \item[Auslöser:] Eingehender Anruf.
+        \item[Vorbedingungen:] Industrie-Mitarbeiter hat Kontakt des Reparatur-Unternehmens angerufen.
+        \item[Nachbedingungen:] Anruf wurde an ausgewählten Kontakt weitergeleitet.
+    \end{description}
+
 \paragraph{\large{Kontakt suchen und auswählen}}
+\textit{Siehe Abbildungen ~\ref{fig:industrieanlage-reparieren} und ~\ref{fig:fig:zimmerservice}}
     \begin{description}
         \item[Ziel:] Der Benutzer hat einen gesuchten Kontakt ausgewählt, wenn es ihn gibt.
         \item[Beschreibung:] Über eine Liste in der Visualisierung, eventuell auch Favoritenliste, kann der Benutzer einen Kontakt auswählen.
@@ -138,6 +154,7 @@ Außerdem wird jeder Anwendungsfall (ein paar Anwendungsfälle doppeln sich in d
     \end{description}
 
 \paragraph{\large{Kontakt anrufen}}
+\textit{Siehe Abbildungen ~\ref{fig:industrieanlage-reparieren} und ~\ref{fig:fig:zimmerservice}}
     \begin{description}
         \item[Ziel:] Der Benutzer startet einen Anruf mit dem ausgewählten Kontakt.
         \item[Beschreibung:] Hat der Benutzer einen Kontakt ausgewählt, kann er diesen über einen Button anrufen.
@@ -148,6 +165,7 @@ Außerdem wird jeder Anwendungsfall (ein paar Anwendungsfälle doppeln sich in d
     \end{description}
 
 \paragraph{\large{Bildschirmfreigabe starten}}
+\textit{Siehe Abbildung ~\ref{fig:industrieanlage-reparieren}}
     \begin{description}
         \item[Ziel:] Die Bildschirmfreigabe soll gestartet werden.
         \item[Beschreibung:] Indem der Benutzer in der Visualisierung den entsprechenden Button betätigt, wird sein Bildschirm mit dem anderen Teilnehmer des Anrufs geteilt.
@@ -159,6 +177,7 @@ Außerdem wird jeder Anwendungsfall (ein paar Anwendungsfälle doppeln sich in d
     \end{description}
 
 \paragraph{\large{Bildschirmfreigabe stoppen}}
+\textit{Siehe Abbildung ~\ref{fig:industrieanlage-reparieren}}
     \begin{description}
         \item[Ziel:] Die Bildschirmfreigabe soll gestoppt werden.
         \item[Beschreibung:] Indem der Benutzer in der Visualisierung den entsprechenden Button betätigt, wird das Teilen seines Bildschirms mit dem anderen Teilnehmer des Anrufs gestoppt.
@@ -169,13 +188,9 @@ Außerdem wird jeder Anwendungsfall (ein paar Anwendungsfälle doppeln sich in d
         \item[Nachbedingungen:] Die Bildschirmfreigabe wurde gestoppt.
     \end{description}
 
-\paragraph{\large{Aufgezeichnetes Videomaterial einsehen}}
-    \begin{description}
-        \item[Ziel:] Aufgezeichnetes Videomaterial, das nicht älter als eine Woche ist, soll eingesehen werden.
-        \item[Beschreibung] Über die Visualisierung kann der Benutzer, über eine Liste, die Kamera auswählen, von der er das aufgezeichnete Videomaterial einsehen möchte.
-            Darufhin wird ihm das entsprechende Videomaterial der letzten 7 Tage angezeigt.
-        \item[Akteure:] Hausverwalter.
-        \item[Auslöser:] Hausverwalter möchte Videomaterial einsehen.
-        \item[Vorbedingungen:] Keine.
-        \item[Nachbedingungen:] Aufgezeichnetes Videomaterial, das nicht älter als eine Woche ist, wurde eingesehen.
-    \end{description}
+\begin{figure}[ht!]
+    \centering
+    \includegraphics[width=\paperwidth-2in]{../assets/img/UML-Anwendungsfalldiagramme-Zimmerservice.drawio}
+    \caption{Anwendungsfälle Zimmerservice}
+    \label{fig:zimmerservice}
+\end{figure}
